src/project/snapshots/pixi__project__python__test__extended.snap
---
source: src/project/python.rs
assertion_line: 66
expression: requirement
---
{
    PackageName {
        source: "foo",
        normalized: "foo",
    }: PythonRequirement {
        version: VersionSpecifiers(
            [
                VersionSpecifier {
                    operator: GreaterThanEqual,
                    version: Version {
                        epoch: 0,
                        release: [
                            3,
                            12,
                        ],
                        pre: None,
                        post: None,
                        dev: None,
                        local: None,
                    },
                },
            ],
        ),
        extras: {
            Extra {
                source: "bar",
                normalized: "bar",
            },
        },
    },
}
