src/project/snapshots/pixi__project__python__test__invalid_git_dependency_error.snap
---
source: src/project/python.rs
assertion_line: 117
expression: requirement.unwrap_err()
---
Error {
    inner: Error {
        inner: TomlError {
            message: "You can set both branch and rev (for foo)",
            original: Some(
                "foo = { git=\"https://github.com/foo/bar\", branch = \"main\", rev=\"deadbeef\" }",
            ),
            keys: [
                "foo",
            ],
            span: Some(
                6..75,
            ),
        },
    },
}
