src/project/snapshots/pixi__project__python__test__only_version.snap
---
source: src/project/python.rs
assertion_line: 102
expression: requirement
---
PypiDependencies {
    requirements: {
        PixiSpanned {
            span: Some(
                0..3,
            ),
            value: PackageName {
                source: "foo",
                normalized: "foo",
            },
        }: PixiSpanned {
            span: Some(
                6..14,
            ),
            value: (
                Dependency(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            3,
                                            12,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                ),
                Requirement {
                    name: "foo",
                    extras: None,
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: GreaterThanEqual,
                                        version: Version {
                                            epoch: 0,
                                            release: [
                                                3,
                                                12,
                                            ],
                                            pre: None,
                                            post: None,
                                            dev: None,
                                            local: None,
                                        },
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                },
            ),
        },
    },
}
